# MemesAPI

./: .env.example  .test.env  Dockerfile  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: linter_check.yml  run_tests.yml
memesapi/: config.py  database.py  main.py
memesapi/memes/: db_requests.py  dependencies.py  models.py  router.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 2024_07_18_1447-4e0e6485e4ee_.py  2024_07_18_1459-f6b48c67593c_.py  2024_07_18_1503-e73389c891e8_.py
minio_microservice/: main.py  micro_config.py
minio_microservice/files/: dependencies.py  router.py  service.py
tests/: conftest.py  test_memes.py
